<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">
    <!-- Reminder for myself, order is important -->

    <TextView
        android:id="@+id/lblCuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtCuantity"
        android:text="@string/activity_main_lblCuantity"/>
    <EditText
        android:id="@+id/txtCuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtCuantity"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="number|numberDecimal"
        android:selectAllOnFocus="true"
        android:gravity="end"
        android:text="@string/default_txt_cuantity">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/txtFromCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/activity_main_lblOriginCoin"/>
    <RadioGroup
        android:id="@+id/rgFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbFromDollar"
            android:enabled="false"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblDollar"/>
        <RadioButton
            android:id="@+id/rbFromEuro"
            android:enabled="true"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblEuro"/>
        <RadioButton
            android:id="@+id/rbFromPound"
            android:enabled="true"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblPound"/>
        <ImageView
            android:id="@+id/imgFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgFrom_desc"
            android:src="@drawable/ic_euro"/>

    </RadioGroup>
    <TextView
        android:id="@+id/txtToCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/activity_main_lblDestinyCoin"/>
    <RadioGroup
        android:id="@+id/rgTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbToDollar"
            android:enabled="true"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblDollar"/>
        <RadioButton
            android:id="@+id/rbToEuro"
            android:enabled="false"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblEuro"/>
        <RadioButton
            android:id="@+id/rbToPound"
            android:enabled="true"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:text="@string/activity_main_lblPound"/>
        <ImageView
            android:id="@+id/imgTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgTo_desc"
            android:src="@drawable/ic_dollar"/>

    </RadioGroup>


    <Button
        android:id="@+id/btnExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/activity_main_btnTransform"/>

</LinearLayout>